[gd_scene load_steps=38 format=3 uid="uid://dfo2744khwf35"]

[ext_resource type="Script" path="res://scripts/goblin_boomer.gd" id="1_243ql"]
[ext_resource type="Texture2D" uid="uid://db5siu65k7i88" path="res://sprites/globin.png" id="2_5pkod"]
[ext_resource type="Texture2D" uid="uid://coqno2k8t8uaa" path="res://sprites/item/boomer_v2.png" id="3_p103t"]
[ext_resource type="Script" path="res://scripts/loot_proxy.gd" id="4_74sqn"]
[ext_resource type="PackedScene" uid="uid://dqepojbmga4ea" path="res://scenes/navigation_agent_2d.tscn" id="6_c2ar2"]
[ext_resource type="PackedScene" uid="uid://dhgdvepcssl3n" path="res://scenes/i_boomer.tscn" id="6_wjk8y"]
[ext_resource type="Script" path="res://scripts/targetFinder.gd" id="7_i6qpi"]
[ext_resource type="Animation" uid="uid://b1bn6rpg1nngh" path="res://animation/stun.res" id="8_ea76i"]
[ext_resource type="AudioStream" uid="uid://dqcq8pnb706f2" path="res://sounds/goblin_yell.mp3" id="9_0w3rv"]
[ext_resource type="Script" path="res://scripts/wandering.gd" id="12_qxe1u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cpxg6"]
radius = 42.0476

[sub_resource type="Animation" id="Animation_2swvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/BoomerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(27, -44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/BoomerSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cg68e"]
resource_name = "attack"
length = 0.44
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/BoomerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.18, 0.24, 0.26, 0.44),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(36, 34), Vector2(36, 34), Vector2(108, 0), Vector2(108, 0), Vector2(60, 22), Vector2(60, 22)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/BoomerSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.12, 0.18, 0.24, 0.26, 0.44),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.214675, 0.214675, 0.0, 0.0, 0.0575959, 0.0575959]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/damage_zone:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.18, 0.24),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.12),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_dagger_attack"
}]
}

[sub_resource type="Animation" id="Animation_mtitu"]
resource_name = "chasing"
loop_mode = 1

[sub_resource type="Animation" id="Animation_ic3m7"]
resource_name = "dying"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(10),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_gylsu"]
resource_name = "wandering"
loop_mode = 1

[sub_resource type="Animation" id="Animation_rmm73"]
resource_name = "throw"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/BoomerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-11, -76), Vector2(38, -55), Vector2(77, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/BoomerSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/BoomerSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.12),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uihj1"]
_data = {
"RESET": SubResource("Animation_2swvi"),
"attack": SubResource("Animation_cg68e"),
"chasing": SubResource("Animation_mtitu"),
"dying": SubResource("Animation_ic3m7"),
"stun": ExtResource("8_ea76i"),
"throw": SubResource("Animation_rmm73"),
"wandering": SubResource("Animation_gylsu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w5dv5"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c14qp"]
animation = &"chasing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v7si6"]
animation = &"dying"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wd0w4"]
animation = &"stun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lma3l"]
animation = &"wandering"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jryju"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6gg5j"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kqpmq"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hcv2b"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0v775"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xa6cx"]
advance_mode = 2
advance_condition = &"target"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xhdx3"]
advance_mode = 2
advance_condition = &"wandering"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cpaxi"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_crb5a"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vwmt7"]
advance_mode = 2
advance_condition = &"unstun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_shpcm"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6xj28"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r156f"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_42fvj"]
states/Start/position = Vector2(200.5, 91)
states/attack/node = SubResource("AnimationNodeAnimation_w5dv5")
states/attack/position = Vector2(510.34, 218.71)
states/chasing/node = SubResource("AnimationNodeAnimation_c14qp")
states/chasing/position = Vector2(321.5, 33)
states/dying/node = SubResource("AnimationNodeAnimation_v7si6")
states/dying/position = Vector2(645, 91.5)
states/stun/node = SubResource("AnimationNodeAnimation_wd0w4")
states/stun/position = Vector2(452.03, -67.485)
states/wandering/node = SubResource("AnimationNodeAnimation_lma3l")
states/wandering/position = Vector2(314.42, 219.086)
transitions = ["chasing", "dying", SubResource("AnimationNodeStateMachineTransition_jryju"), "chasing", "attack", SubResource("AnimationNodeStateMachineTransition_6gg5j"), "attack", "chasing", SubResource("AnimationNodeStateMachineTransition_kqpmq"), "attack", "dying", SubResource("AnimationNodeStateMachineTransition_hcv2b"), "Start", "wandering", SubResource("AnimationNodeStateMachineTransition_0v775"), "wandering", "chasing", SubResource("AnimationNodeStateMachineTransition_xa6cx"), "chasing", "wandering", SubResource("AnimationNodeStateMachineTransition_xhdx3"), "wandering", "dying", SubResource("AnimationNodeStateMachineTransition_cpaxi"), "chasing", "stun", SubResource("AnimationNodeStateMachineTransition_crb5a"), "stun", "chasing", SubResource("AnimationNodeStateMachineTransition_vwmt7"), "stun", "dying", SubResource("AnimationNodeStateMachineTransition_shpcm"), "attack", "stun", SubResource("AnimationNodeStateMachineTransition_6xj28"), "wandering", "stun", SubResource("AnimationNodeStateMachineTransition_r156f")]
graph_offset = Vector2(-131.085, -13.62)

[node name="GoblinBoomer" type="CharacterBody2D" groups=["mob"]]
z_index = 9
script = ExtResource("1_243ql")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5pkod")
region_rect = Rect2(384, 128, 128, 128)

[node name="BoomerSprite" type="Sprite2D" parent="Sprite2D"]
visible = false
z_index = -1
position = Vector2(27, -44)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_p103t")
script = ExtResource("4_74sqn")
item_path = "res://scenes/i_spear.tscn"

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D"]
target_position = Vector2(130, 0)

[node name="ItemBack1" type="Node2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-41, -31)
rotation = 0.0816453

[node name="iBoomer" parent="Sprite2D/ItemBack1" instance=ExtResource("6_wjk8y")]

[node name="ItemBack2" type="Node2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-44, 9)
rotation = -0.061251

[node name="iBoomer" parent="Sprite2D/ItemBack2" instance=ExtResource("6_wjk8y")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cpxg6")

[node name="NavigationAgent2D" parent="." instance=ExtResource("6_c2ar2")]
target_desired_distance = 240.0

[node name="TargetFinder" type="Node" parent="."]
script = ExtResource("7_i6qpi")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uihj1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_uihj1")
}
tree_root = SubResource("AnimationNodeStateMachine_42fvj")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/dying = false
parameters/conditions/stun = false
parameters/conditions/target = false
parameters/conditions/unstun = false
parameters/conditions/wandering = false

[node name="death_yell" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_0w3rv")
bus = &"SFX"

[node name="Wandering" type="Node" parent="."]
script = ExtResource("12_qxe1u")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
